--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-youtube": "^10.1.0",
     "sharp": "^0.33.2",
     "swiper": "^11.0.7"
   },
