🔑 Login and Logout

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
 NEXT_PUBLIC_API_BASE_URL=YOUR_API_BASE_URL
+
+GITHUB_CLIENT=YOUR_GITHUB_CLIENT
+GITHUB_SECRET=YOUR_GITHUB_SECRET
+
+GOOGLE_CLIENT=YOUR_GOOGLE_CLIENT
+GOOGLE_SECRET=YOUR_GOOGLE_SECRET
+
+NEXTAUTH_SECRET=YOUR_SECRET
+NEXTAUTH_URL=YOUR_SITE_URL
