--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "axios": "^1.6.7",
     "axios-rate-limit": "^1.3.0",
-    "next": "^14.1.2",
+    "next": "^14.1.3",
     "next-auth": "^4.24.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-youtube": "^10.1.0",
@@ -28,7 +28,7 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.2",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "^14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
