--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ GOOGLE_SECRET=YOUR_GOOGLE_SECRET
 
 NEXTAUTH_SECRET=YOUR_SECRET
 NEXTAUTH_URL=YOUR_SITE_URL
+
+DATABASE_URL=YOUR_DATABASE_URL
+DIRECT_URL=YOUR_DIRECT_URL
